--- a/hbedit.ini
+++ b/hbedit.ini
@@ -62,19 +62,20 @@ cp3=RUKOI8
 cp4=UTF8
 
 [PLUGINS]
-p2=plug_prg_run.hrb,prg,Run code,Alt-R
-p3=plug_prg_compile.hrb,prg,Compile plugin
-p4=plug_go_spis.hrb,go,Functions list,Alt-L
-p5=plug_c_spis.hrb,c,Functions list,Alt-L
-p6=plug_go_run.hrb,go,Run code,Alt-R
-p7=plug_go_build.hrb,go,Build
-p8=plug_go_fmt.hrb,go,Format code
-p9=plug_py_spis.hrb,py,Functions list,Alt-L
-p10=plug_chartable.hrb,,CharTable
-p11=plug_calculator.hrb,,Calcularor
-p12=plug_gm_tetris.hrb,,Tetris
-p13=plug_gm_sokoban.hrb,,Sokoban
-p14=plug_gm_strek.hrb,,StarTrek
+p1=plug_prg_run.hrb,prg,Run code,Alt-R
+p2=plug_prg_compile.hrb,prg,Compile plugin
+p3=plug_go_spis.hrb,go,Functions list,Alt-L
+p4=plug_go_run.hrb,go,Run code,Alt-R
+p5=plug_go_build.hrb,go,Build
+p6=plug_go_fmt.hrb,go,Format code
+p7=plug_py_spis.hrb,py,Functions list,Alt-L
+p8=plug_chartable.hrb,,CharTable
+p9=plug_calculator.hrb,,Calcularor
+p10=plug_gm_tetris.hrb,,Tetris
+p11=plug_gm_sokoban.hrb,,Sokoban
+p12=plug_gm_strek.hrb,,StarTrek
+p13=plug_gm_life.hrb,,Game of Life
+p14=plug_gm_chess.hrb,,Chess
 p15=plug_webservices.hrb,,WebServices
 p16=plug_vcs.hrb,,Git/Fossil
 
