Java added to langs in hbedit.ini

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -276,6 +276,14 @@ scomm=W+/B,-
 startline=W/B,#
 mcomm={ }
 
+[LANG_JAVA]
+ext=.java
+keywords1=abstract assert boolean break byte case catch char class continue const default do double else enum exports extends final finally float for goto if implements import instanceof int interface long module native new null package private protected public requires return short static strictfp super switch synchronized this throw throws transient try var void volatile while
+scomm=//
+mcomm=/* */
+case=on
+brackets=On
+
 [LANG_1C]
 ext=.1c
 keywords1=do each enddo endif for if elsif else then while function procedure endfunction endprocedure
