Fixes. Java plugin added.

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -278,6 +278,7 @@ mcomm={ }
 
 [LANG_JAVA]
 ext=.java
+plugin=plug_java_init.hrb
 keywords1=abstract assert boolean break byte case catch char class continue const default do double else enum exports extends final finally float for goto if implements import instanceof int interface long module native new null package private protected public requires return short static strictfp super switch synchronized this throw throws transient try var void volatile while
 scomm=//
 mcomm=/* */
