--- a/hbedit.ini
+++ b/hbedit.ini
@@ -279,7 +279,8 @@ mcomm={ }
 [LANG_JAVA]
 ext=.java
 plugin=plug_java_init.hrb
-keywords1=abstract assert boolean break byte case catch char class continue const default do double else enum exports extends final finally float for goto if implements import instanceof int interface long module native new null package private protected public requires return short static strictfp super switch synchronized this throw throws transient try var void volatile while
+keywords1=abstract assert break case catch class continue const default do else enum exports extends final finally for goto if implements import instanceof interface module native new package private protected public requires return static strictfp super switch synchronized this throw throws transient try var volatile while
+keywords2=boolean byte char double float int long null short void 
 scomm=//
 mcomm=/* */
 case=on
