bat and sh init plugins added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -265,9 +265,17 @@ mcomm=W+/B,[ ]
 
 [LANG_BAT]
 ext=.bat
+plugin=plug_bat_init.hrb
 keywords1=del echo errorlevel exist goto if md not off set
 scomm=rem
 startline=:
+
+[LANG_SH]
+ext=.sh
+plugin=plug_sh_init.hrb
+keywords1=export
+keywords2=cd rm
+scomm=#
 
 [LANG_HBP]
 ext=.hbp
