sh support extended

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -273,8 +273,8 @@ startline=:
 [LANG_SH]
 ext=.sh
 plugin=plug_sh_init.hrb
-keywords1=export
-keywords2=cd rm
+keywords1=break elif else eval exit fi function if return test while
+keywords2=alias cat cd chmod chown clear cp echo export find grep head let ln locate ls mkdir mv popd printf pushd pwd rename rm rmdir sudo tail touch xargs
 scomm=#
 
 [LANG_HBP]
