few keywords for Java added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -290,6 +290,7 @@ ext=.java
 plugin=plug_java_init.hrb
 keywords1=abstract assert break case catch class continue const default do else enum exports extends final finally for goto if implements import instanceof interface module native new package private protected public requires return static strictfp super switch synchronized this throw throws transient try var volatile while
 keywords2=boolean byte char double float int long null short void 
+keywords3=String ArrayList HashMap
 scomm=//
 mcomm=/* */
 case=on
