--- a/hbedit.ini
+++ b/hbedit.ini
@@ -77,8 +77,9 @@ p12=plug_gm_strek.hrb,,StarTrek
 p13=plug_gm_life.hrb,,Game of Life
 p14=plug_gm_chess.hrb,,Chess
 p15=plug_gm_ugolki.hrb,,Ugolki
-p16=plug_webservices.hrb,,WebServices
-p17=plug_vcs.hrb,,Git/Fossil
+p16=plug_gm_sudoku.hrb,,Sudoku
+p17=plug_webservices.hrb,,WebServices
+p18=plug_vcs.hrb,,Git/Fossil
 
 [HILIGHT]
 ;colormain=BG+/B
