--- a/hbedit.ini
+++ b/hbedit.ini
@@ -71,15 +71,17 @@ p6=plug_go_fmt.hrb,go,Format code
 p7=plug_py_spis.hrb,py,Functions list,Alt-L
 p8=plug_chartable.hrb,,CharTable
 p9=plug_calculator.hrb,,Calcularor
-p10=plug_gm_tetris.hrb,,Tetris
-p11=plug_gm_sokoban.hrb,,Sokoban
-p12=plug_gm_strek.hrb,,StarTrek
-p13=plug_gm_life.hrb,,Game of Life
-p14=plug_gm_chess.hrb,,Chess
-p15=plug_gm_ugolki.hrb,,Ugolki
-p16=plug_gm_sudoku.hrb,,Sudoku
-p17=plug_webservices.hrb,,WebServices
-p18=plug_vcs.hrb,,Git/Fossil
+p10=plug_palette.hrb,,Show Palette
+p11=plug_gm_tetris.hrb,,Tetris
+p12=plug_gm_sokoban.hrb,,Sokoban
+p13=plug_gm_strek.hrb,,StarTrek
+p14=plug_gm_life.hrb,,Game of Life
+p15=plug_gm_chess.hrb,,Chess
+p16=plug_gm_ugolki.hrb,,Ugolki
+p17=plug_gm_sudoku.hrb,,Sudoku
+p18=plug_webservices.hrb,,WebServices
+p19=plug_vcs.hrb,,Git/Fossil
+p20=plug_android_project.hrb,,Android Project
 
 [HILIGHT]
 ;colormain=BG+/B
