--- a/hbc.ini
+++ b/hbc.ini
@@ -40,4 +40,4 @@ path2=c:\Program Files\,Alt-1
 ;app2=d:\Archive\books_misc\fb2list\fb2man_sql.exe,Fb2Man
 
 [PLUGINS]
-;p1=plug_hbc_latin.hrb,,Convert file name
+p1=plug_hbc_latin.hrb,,Convert file name
