--- a/hbc.ini
+++ b/hbc.ini
@@ -7,6 +7,9 @@ context_menu_plugin=plug_hbc_menu.hrb
 ;colorbox=+W/B
 ;colordir=+W/B
 ;colorfile=BG+/B
+;colorfileexe=+G/B
+;colorfilezip=+RB/B
+;colorfilehidden=W/B
 ;colorcurr=N/BG
 ;colorsel=+GR/B
 ;colorselcurr=+GR/BG
