Fixes, version number changed

--- a/hbc.ini
+++ b/hbc.ini
@@ -4,6 +4,7 @@ cp=RU866
 context_menu_plugin=plug_hbc_menu.hrb
 
 [COLORS]
+; Default set
 ;colorbox=+W/B
 ;colordir=+W/B
 ;colorfile=BG+/B
@@ -15,6 +16,19 @@ context_menu_plugin=plug_hbc_menu.hrb
 ;colorselcurr=+GR/BG
 ;colormenuf=W/B
 ;colormenub=N/BG
+
+; A set for solarized dark
+;colorbox=W/B
+;colordir=W/B
+;colorfile=RB/B
+;colorfileexe=W+/B
+;colorfilezip=BG+/B
+;colorfilehidden=BG/B
+;colorcurr=GR/RB
+;colorsel=N+/B
+;colorselcurr=B/RB
+;colormenuf=GR/B
+;colormenub=N/RB
 
 [PANE1]
 ;path=c:\
