Autocompletion added to console

--- a/hbc.ini
+++ b/hbc.ini
@@ -26,7 +26,7 @@ context_menu_plugin=plug_hbc_menu.hrb
 ;colorfilehidden=BG/B
 ;colorcurr=GR/RB
 ;colorsel=N+/B
-;colorselcurr=B/RB
+;colorselcurr=N+/G
 ;colormenuf=GR/B
 ;colormenub=N/RB
 
