--- a/hbc.ini
+++ b/hbc.ini
@@ -35,8 +35,10 @@ context_menu_plugin=plug_hbc_menu.hrb
 mode=2
 
 [PATHS]
-;path1=net:10.8.0.1
-path2=c:\Program Files\,Alt-1
+path1=c:\Program Files\,Alt-1
+;path10=net:10.8.0.1
+;Demo public sftp server, use demo/password to login
+path11=sftp:test.rebex.net
 
 [EXTVIEW]
 ;/jpg/jpeg/bmp/tif/gif/png/ico/="C:\Program Files (x86)\IrfanView\i_view32.exe"
