--- a/hbedit.ini
+++ b/hbedit.ini
@@ -13,12 +13,14 @@ screen_height=30
 ;cp=RU866
 
 [START]
-; A plugin name to be launched at start, before any file is opened.
+; A plugin name to be launched at start, before any file is opened
 ;plugin=
-; Maximize editor window at start.
+; Maximize editor window at start (On|Off)
 ;maximize=Off
-; Files list, divided by commas, to be opened at start.
+; Files list, divided by commas, to be opened at start
 ;files=
+;Open HbCommander at start (On|Off)
+;hbcommander=
 
 [OPTIONS]
 ;defmode=0
