--- a/hbc.ini
+++ b/hbc.ini
@@ -39,7 +39,8 @@ mode=2
 path1=c:\Program Files\,Alt-1
 ;path10=net:10.8.0.1
 ;Demo public sftp server, use demo/password to login
-path11=sftp:test.rebex.net
+;path11=sftp:test.rebex.net
+;ftp:ftp.gnu.org
 
 [EXTVIEW]
 ;/jpg/jpeg/bmp/tif/gif/png/ico/="C:\Program Files (x86)\IrfanView\i_view32.exe"
@@ -61,3 +62,4 @@ path11=sftp:test.rebex.net
 
 [PLUGINS]
 p1=plug_hbc_latin.hrb,,Convert file name
+p2=plug_hbc_ftp.hrb,,FTP access
