--- a/hbc.ini
+++ b/hbc.ini
@@ -1,8 +1,11 @@
 [OPTIONS]
+;cp - codepage for file names
 cp=RU866
 ;palette=default
+;context_menu_plugin - a plugun, which extends context menu
 context_menu_plugin=plug_hbc_menu.hrb
-;consauto=On
+;consauto - turns on/off the autocompletion in console
+;consauto=Off
 
 [COLORS]
 ; Default set
@@ -32,31 +35,43 @@ context_menu_plugin=plug_hbc_menu.hrb
 ;colormenub=N/RB
 
 [PANE1]
+;A path and a mode for a left pane at start
 ;path=c:\
 mode=2
 
+[PANE2]
+;A path and a mode for a right pane at start
+;path=c:\
+mode=1
+
 [PATHS]
+; A set of predefined path for a quick access (Alt-D)
 path1=c:\Program Files\,Alt-1
 ;path10=net:10.8.0.1
 ;Demo public sftp server, use demo/password to login
 ;path11=sftp:test.rebex.net
-;ftp:ftp.gnu.org
+;Public ftp server, no need the login/pass
+;path12=ftp:ftp.gnu.org
 
 [EXTVIEW]
+;Applications to open files by extentions when Ctrl-F3 is pressed
 ;/jpg/jpeg/bmp/tif/gif/png/ico/="C:\Program Files (x86)\IrfanView\i_view32.exe"
 ;fb2.zip=c:\Programs\AlReader\AlReader2.exe
 ;/zip/rar/7z/gz/tar.gz/="C:\Program Files (x86)\7-Zip\7zFM.exe"
 ;...=c:\programs\editors\hexedit\hexedit.exe
 
 [EXTEDIT]
+;Applications to open files by extentions when Ctrl-F4 is pressed
 ;/prg/c/cpp/js/php/java/=c:\programs\editors\notepad++\notepad++.exe
 
 [EXTENTER]
+;Applications to open files by extentions when Enter is pressed
 ;dbf=dbch
 ;/mp3/flac/="C:\Program Files (x86)\Multimedia\AIMP\AIMP.exe"
 ;/mp4/avi/webm/="C:\Program Files\Multimedia\VLC\vlc.exe"
 
 [APPLIST]
+;A set of applications for a quick access (Ctrl-F12)
 ;app1=c:\Programs\AlReader\AlReader2.exe,Alreader
 ;app2=d:\Archive\books_misc\fb2list\fb2man_sql.exe,Fb2Man
 
