folders compare plugin added

--- a/hbc.ini
+++ b/hbc.ini
@@ -6,6 +6,8 @@ cp=RU866
 context_menu_plugin=plug_hbc_menu.hrb
 ;consauto - turns on/off the autocompletion in console
 ;consauto=Off
+;stdout_size - max size of a text in stdout window
+;stdout_size=40000
 
 [COLORS]
 ; Default set
