Fixes, version changed

--- a/hbc.ini
+++ b/hbc.ini
@@ -79,4 +79,12 @@ path1=c:\Program Files\,Alt-1
 
 [PLUGINS]
 p1=plug_hbc_latin.hrb,,Convert file name
-p2=plug_hbc_ftp.hrb,,FTP access
+p2=plug_hbc_files_compare.hrb,,Compare files
+p3=plug_hbc_folders_compare.hrb,,Compare folders
+p4=plug_hbc_ftp.hrb,,FTP access
+
+[MISC]
+;filecompare - Application to compare files
+;filecompare=examdiff
+;foldcompare - Application to compare folders
+;foldcompare=csdiff.exe
