--- a/hbc.ini
+++ b/hbc.ini
@@ -70,7 +70,7 @@ path1=c:\Program Files\,Alt-1
 ;Applications to open files by extentions when Enter is pressed
 ;dbf=dbch
 ;/mp3/flac/="C:\Program Files (x86)\Multimedia\AIMP\AIMP.exe"
-;/mp4/avi/webm/="C:\Program Files\Multimedia\VLC\vlc.exe"
+;/mp4/avi/webm/mkv/="C:\Program Files\Multimedia\VLC\vlc.exe"
 
 [APPLIST]
 ;A set of applications for a quick access (Ctrl-F12)
