Internationalization files added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -49,6 +49,7 @@ palette=far
 ;tablen=4
 ; tabtospaces (default = Off) - if On, tabs are converted to spaces
 ;tabtospaces=Off
+;langcp=ru866
 langmap_cp=RU1251
 langmap_upper=װֲָׁ׃ְֿ׀״־ִֻÜׂÙַֹÊÛֳֵּײ׳ֽßÝ¨Þֱ ABCDEFGHIJKLMNOPQRSTUVWXYZ"~><
 langmap_lower=פטסגףאןנרמכהüעשחיךûודלצקםÿ‎¸‏ב abcdefghijklmnopqrstuvwxyz'`.,
