Fixes, documents history added

--- a/hbc.ini
+++ b/hbc.ini
@@ -12,6 +12,8 @@ context_menu_plugin=plug_hbc_menu.hrb
 ;cpinuse=RU866,RU1251,UTF8
 ; utf8auto - list of services with utf8 as a default codepage
 ;utf8auto=sftp:,ftp:
+;dochis=odt,doc,docx,pdf,djvu
+;docmax=50
 
 [COLORS]
 ; Default set
@@ -75,6 +77,9 @@ path1=c:\Program Files\,Alt-1
 ;dbf=dbch
 ;/mp3/flac/="C:\Program Files (x86)\Multimedia\AIMP\AIMP.exe"
 ;/mp4/avi/webm/mkv/="C:\Program Files\Multimedia\VLC\vlc.exe"
+
+[QUICKVIEW]
+; Plugins to quick view files when Ctrl-Q is pressed
 
 [APPLIST]
 ; A set of applications for a quick access (Ctrl-F12)
