--- a/hbc.ini
+++ b/hbc.ini
@@ -80,6 +80,7 @@ path1=c:\Program Files\,Alt-1
 
 [QUICKVIEW]
 ; Plugins to quick view files when Ctrl-Q is pressed
+/fb2/fb2.zip/=plug_hbc_fb2_quick.hrb
 
 [APPLIST]
 ; A set of applications for a quick access (Ctrl-F12)
@@ -91,6 +92,8 @@ p1=plug_hbc_latin.hrb,,Convert file name
 p2=plug_hbc_files_compare.hrb,,Compare files
 p3=plug_hbc_folders_compare.hrb,,Compare folders
 p4=plug_hbc_ftp.hrb,,FTP access
+p5=plug_hbc_ext_fb2zip.hrb,,Fb2 Reader
+p6=plug_hbc_ext_fb2.hrb,"ext",Fb2
 
 [MISC]
 ; filecompare - Application to compare files
