img quick view is ready

--- a/hbc.ini
+++ b/hbc.ini
@@ -81,6 +81,7 @@ path1=c:\Program Files\,Alt-1
 [QUICKVIEW]
 ; Plugins to quick view files when Ctrl-Q is pressed
 /fb2/fb2.zip/=plug_hbc_fb2_quick.hrb
+/jpg/bmp/gif/=plug_hbc_img_quick.hrb
 
 [APPLIST]
 ; A set of applications for a quick access (Ctrl-F12)
