Image view plugin added

--- a/hbc.ini
+++ b/hbc.ini
@@ -81,7 +81,7 @@ path1=c:\Program Files\,Alt-1
 [QUICKVIEW]
 ; Plugins to quick view files when Ctrl-Q is pressed
 /fb2/fb2.zip/=plug_hbc_fb2_quick.hrb
-/jpg/bmp/gif/=plug_hbc_img_quick.hrb
+/jpg/bmp/gif/png/tif/=plug_hbc_img_quick.hrb
 
 [APPLIST]
 ; A set of applications for a quick access (Ctrl-F12)
@@ -94,7 +94,7 @@ p2=plug_hbc_files_compare.hrb,,Compare files
 p3=plug_hbc_folders_compare.hrb,,Compare folders
 p4=plug_hbc_ftp.hrb,,FTP access
 p5=plug_hbc_ext_fb2zip.hrb,,Fb2 Reader
-p6=plug_hbc_ext_fb2.hrb,"ext",Fb2
+p6=plug_hbc_ext_all.hrb,"ext",All
 
 [MISC]
 ; filecompare - Application to compare files
