hwbuilder related lines added to hbc.ini

--- a/hbc.ini
+++ b/hbc.ini
@@ -71,12 +71,14 @@ path1=c:\Program Files\,Alt-1
 [EXTEDIT]
 ; Applications to open files by extentions when Ctrl-F4 is pressed
 ;/prg/c/cpp/js/php/java/=c:\programs\editors\notepad++\notepad++.exe
+hwprj=hwb -Open
 
 [EXTENTER]
 ; Applications to open files by extentions when Enter is pressed
 ;dbf=dbch
 ;/mp3/flac/="C:\Program Files (x86)\Multimedia\AIMP\AIMP.exe"
 ;/mp4/avi/webm/mkv/="C:\Program Files\Multimedia\VLC\vlc.exe"
+hwprj=@hwbc -q
 
 [QUICKVIEW]
 ; Plugins to quick view files when Ctrl-Q is pressed
