hwprj plugin added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -293,6 +293,12 @@ scomm=W+/B,-
 startline=W/B,#
 mcomm={ }
 
+[LANG_HWPRJ]
+ext=.hwprj
+keywords=:project objpath srcpath libspath outpath outname def_cflags def_lflags def_libflags prgflags cflags gtlib libs target makemode c_compiler guilib
+startline=W/B,#
+mcomm={ }
+
 [LANG_JAVA]
 ext=.java
 plugin=plug_java_init.hrb
