--- a/hbc.ini
+++ b/hbc.ini
@@ -78,7 +78,7 @@ hwprj=hwb -Open
 ;dbf=dbch
 ;/mp3/flac/="C:\Program Files (x86)\Multimedia\AIMP\AIMP.exe"
 ;/mp4/avi/webm/mkv/="C:\Program Files\Multimedia\VLC\vlc.exe"
-hwprj=@hwbc -q
+hwprj/prg=@hwbc -q
 
 [QUICKVIEW]
 ; Plugins to quick view files when Ctrl-Q is pressed
