--- a/hbedit.ini
+++ b/hbedit.ini
@@ -226,7 +226,7 @@ brackets=On
 ext=.go
 plugin=plug_go_init.hrb
 keywords1= break case chan const continue default defer else fallthrough for func go goto if import interface map package range return select struct switch true type var
-keywords2= bool byte rune string error false true iota nil int8 int16 int32 int64 int uint8 uint16 uint32 uint64 uint  float32 float64 complex128 complex64 
+keywords2= bool byte rune string error false true iota nil int8 int16 int32 int64 int uint8 uint16 uint32 uint64 uint  float32 float64 complex128 complex64
 keywords3= append cap close complex copy delete imag len make new panic real recover
 scomm=//
 mcomm=/* */
@@ -295,7 +295,8 @@ mcomm={ }
 
 [LANG_HWPRJ]
 ext=.hwprj
-keywords=:project objpath srcpath libspath outpath outname def_cflags def_lflags def_libflags prgflags cflags gtlib libs target makemode c_compiler guilib
+plugin=plug_hwprj_init.hrb
+keywords1=project objpath srcpath libspath outpath outname def_cflags def_lflags def_libflags prgflags cflags gtlib libs target makemode c_compiler guilib
 startline=W/B,#
 mcomm={ }
 
@@ -303,7 +304,7 @@ mcomm={ }
 ext=.java
 plugin=plug_java_init.hrb
 keywords1=abstract assert break case catch class continue const default do else enum exports extends final finally for goto if implements import instanceof interface module native new package private protected public requires return static strictfp super switch synchronized this throw throws transient try var volatile while
-keywords2=boolean byte char double float int long null short void 
+keywords2=boolean byte char double float int long null short void
 keywords3=String ArrayList HashMap
 scomm=//
 mcomm=/* */
@@ -313,6 +314,6 @@ brackets=On
 [LANG_1C]
 ext=.1c
 keywords1=do each enddo endif for if elsif else then while function procedure endfunction endprocedure
-keywords2=для каждого если иначеесли конецесли пока цикл конеццикла тогда выбрать выбор когда иначе конец где из поместить сгруппировать по левое правое внутреннее полное соединение функция конецфункции процедура конецпроцедуры 
+keywords2=для каждого если иначеесли конецесли пока цикл конеццикла тогда выбрать выбор когда иначе конец где из поместить сгруппировать по левое правое внутреннее полное соединение функция конецфункции процедура конецпроцедуры
 scomm=//
 brackets=On
