Fixes, version changed

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -86,6 +86,7 @@ p17=plug_gm_sudoku.hrb,,Sudoku
 p18=plug_webservices.hrb,,WebServices
 p19=plug_vcs.hrb,,Git/Fossil
 p20=plug_android_project.hrb,,Android Project
+;p21=plug_extllm.hrb,,Llama
 
 [HILIGHT]
 ;colormain=BG+/B
