bKeys parameter added to fmenu(), F2 in doclist changes current dir to a dir of a document

--- a/hbc.ini
+++ b/hbc.ini
@@ -12,7 +12,9 @@ context_menu_plugin=plug_hbc_menu.hrb
 ;cpinuse=RU866,RU1251,UTF8
 ; utf8auto - list of services with utf8 as a default codepage
 ;utf8auto=sftp:,ftp:
-;dochis=odt,doc,docx,pdf,djvu
+;dochis=odt,doc,docx
+;dochis-2=pdf,djvu
+;dochis-3=mp3,flac,mp4,avi
 ;docmax=50
 
 [COLORS]
