--- a/hbedit.ini
+++ b/hbedit.ini
@@ -72,7 +72,6 @@ p3=plug_go_spis.hrb,go,Functions list,Alt-L
 p4=plug_go_run.hrb,go,Run code,Alt-R
 p5=plug_go_build.hrb,go,Build
 p6=plug_go_fmt.hrb,go,Format code
-p7=plug_py_spis.hrb,py,Functions list,Alt-L
 p8=plug_chartable.hrb,,CharTable
 p9=plug_calculator.hrb,,Calcularor
 p10=plug_palette.hrb,,Show Palette
@@ -236,6 +235,7 @@ brackets=On
 
 [LANG_PY]
 ext=.py
+plugin=plug_py_init.hrb
 keywords1=and as assert break class continue def del elif else except finally false for from global if import in is lambda nonlocal None not or pass raise return True try while with yield
 keywords2=abs all any ascii bin bool breakpoint bytearray bytes callable chr classmethod compile complex delattr dict dir divmod enumerate eval exec filter float format frozenset getattr globals hasattr hash help hex id input int isinstance issubclass iter len list locals map max memoryview min next object oct open ord pow print property range repr reversed round set setattr slice sorted staticmethod str sum super tuple type vars zip __import__
 scomm=#
