run command added to go init plugin. Go run plugin is not needed

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -69,7 +69,7 @@ cp4=UTF8
 p1=plug_prg_run.hrb,prg,Run code,Alt-R
 p2=plug_prg_compile.hrb,prg,Compile plugin
 p3=plug_go_spis.hrb,go,Functions list,Alt-L
-p4=plug_go_run.hrb,go,Run code,Alt-R
+;p4=plug_go_run.hrb,go,Run code,Alt-R
 p5=plug_go_build.hrb,go,Build
 p6=plug_go_fmt.hrb,go,Format code
 p8=plug_chartable.hrb,,CharTable
