plugin - games aggregator added, hot key changed for hbedit plugins

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -72,17 +72,13 @@ p5=plug_go_build.hrb,go,Build
 p8=plug_chartable.hrb,,CharTable
 p9=plug_calculator.hrb,,Calcularor
 p10=plug_palette.hrb,,Show Palette
-p11=plug_gm_tetris.hrb,,Tetris
-p12=plug_gm_sokoban.hrb,,Sokoban
-p13=plug_gm_strek.hrb,,StarTrek
-p14=plug_gm_life.hrb,,Game of Life
-p15=plug_gm_chess.hrb,,Chess
-p16=plug_gm_ugolki.hrb,,Ugolki
-p17=plug_gm_sudoku.hrb,,Sudoku
+p12=plug_games.hrb,,Games -->
 p18=plug_webservices.hrb,,WebServices
 p19=plug_vcs.hrb,,Git/Fossil
 p20=plug_android_project.hrb,,Android Project
 ;p21=plug_extllm.hrb,,Llama
+;p22=plug_hugclient.hrb,,Hugging Face Chat
+;p23=plug_topython.hrb,,Python pluguns
 
 [HILIGHT]
 ;colormain=BG+/B
