Python plugin autocompeting extended

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -144,9 +144,9 @@ keywords3=GR+/N
 keywords4=RB+/N
 keywords5=RB+/N
 quotes=N+/N
-scomm=G/N
+scomm=BG/N
 startline=B+/N
-mcomm=G/N
+mcomm=BG/N
 
 [PALETTE_3]
 name=solarized mid
@@ -166,9 +166,9 @@ keywords3=GR+/B
 keywords4=RB+/B
 keywords5=RB+/B
 quotes=N+/B
-scomm=G/B
+scomm=BG/B
 startline=B+/B
-mcomm=G/B
+mcomm=BG/B
 
 [PALETTE_4]
 name=solarized light
