--- a/hbc.ini
+++ b/hbc.ini
@@ -100,6 +100,9 @@ p4=plug_hbc_ftp.hrb,,FTP access
 p5=plug_hbc_ext_fb2zip.hrb,,Fb2 Reader
 p6=plug_hbc_ext_all.hrb,"ext",All
 
+[CONSOLE]
+nowindow=git python
+
 [MISC]
 ; filecompare - Application to compare files
 ;filecompare=examdiff
