--- a/hbedit.ini
+++ b/hbedit.ini
@@ -75,10 +75,9 @@ p10=plug_palette.hrb,,Show Palette
 p12=plug_games.hrb,,Games -->
 p18=plug_webservices.hrb,,WebServices
 p19=plug_vcs.hrb,,Git/Fossil
-p20=plug_android_project.hrb,,Android Project
+;p20=plug_android_project.hrb,,Android Project
 ;p21=plug_extllm.hrb,,Llama
 ;p22=plug_hugclient.hrb,,Hugging Face Chat
-;p23=plug_topython.hrb,,Python pluguns
 
 [HILIGHT]
 ;colormain=BG+/B
