--- a/hbedit.ini
+++ b/hbedit.ini
@@ -217,7 +217,7 @@ brackets=On
 [LANG_CPP]
 ext=.cpp.h.hpp
 plugin=plug_c_init.hrb
-keywords1=auto break case continue default do exit else enum extern for for_each goto if return short sizeof static struct switch typedef union while class virtual public private protected
+keywords1=auto break case continue default do exit else enum extern final for for_each goto if override public private protected return short sizeof static struct switch typedef union while class virtual
 keywords2=isalnum isalpha isblank iscntrl isdigit isgraph islower isprint ispunct isspace isupper isxdigit tolower toupper localeconv setlocale acos asin atan atan2 atof ceil cos cosh exp fabs floor fmod frexp ldexp log log10 modf pow sin sinh sqrt tan tanh longjmp setjmp raise  clearerr fclose feof ferror fflush fgetc fgetpos fgets fopen freopen fprintf fputc fputs fread fscanf fseek fsetpos ftell fwrite getc getchar gets perror printf fprintf sprintf putc putchar puts remove rename rewind scanf fscanf sscanf setbuf setvbuf tmpfile tmpnam ungetc vprintf vfprintf vsprintf abort abs labs atexit atof atoi atol bsearch div ldiv exit free getenv ldiv malloc calloc realloc qsort rand srand strtod strtol strtoul system memchr memcmp memcpy memmove memset strcat strncat strchr strcmp strncmp strcoll strcpy strncpy strcspn strerror strlen strpbrk strrchr strspn strstr strtok strxfrm asctime clock ctime difftime gmtime localtime mktime strftime time
 keywords3=char double float int long NULL nullptr unsigned void
 keywords4=HB_FUNC hb_parl hb_parni hb_parc hb_retl hb_retni hb_retc
